[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/WaterLucosa/Sprites/IMG_1577.PNG" type="Texture" id=1]
[ext_resource path="res://Code/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/WaterLucosa/Projectile/Projectile.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Particles/Circle.png" type="Texture" id=4]
[ext_resource path="res://Enemies/WaterLucosa/Sprites/IMG_1575.PNG" type="Texture" id=5]
[ext_resource path="res://Enemies/WaterLucosa/Sprites/IMG_1576.PNG" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.418033, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 128.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.07
scale_curve = SubResource( 3 )
color = Color( 0.352941, 0.454902, 0.807843, 1 )

[sub_resource type="Animation" id=6]
resource_name = "Grow"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ), Vector2( 1, 1 ) ]
}

[node name="Projectile" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyData" parent="." instance=ExtResource( 2 )]
deathShards = 0
colArea = NodePath("../CollisionShape2D")
freeParentOnDeath = false
giveParentFlashShader = false
shakeOnDeath = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.167, 0.167 )
frames = SubResource( 5 )
frame = 1
playing = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="DestroyAnimTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Grow"
anims/Grow = SubResource( 6 )
